Sam's suggested GUI changes

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -346,9 +346,10 @@ SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Bitzi Web Lookup...
 SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Magnet details for file
 SEARCH_PUBLIC_HTTP_PAGE_STRING=Web page for file(s)
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Repeat Search
-SEARCH_PUBLIC_BLOCK_STRING=Block Host
-SEARCH_PUBLIC_BLOCK_FILE_STRING=Exclude File From Future Results
-SEARCH_PUBLIC_UNBLOCK_ALL_FILES_STRING=Exclude Nothing From Future Results
+SEARCH_PUBLIC_BLOCK_STRING=Block
+SEARCH_PUBLIC_BLOCK_HOST_STRING=Host
+SEARCH_PUBLIC_BLOCK_FILE_STRING=File
+SEARCH_PUBLIC_COMPLETE_BLOCK_FILE_STRING=Block File
 SEARCH_RESULT_TABLE_LABEL=Results
 SEARCH_SEARCHING_LABEL=Searching...
 SEARCH_VIRUS_MSG_ONE=One of the selected files is an executable
@@ -377,7 +378,8 @@ SEARCH_SELECT_TYPE=Select Type:
 SEARCH_FILTER_RESULTS=Filter Results:
 SEARCH_BACK_TO_SEARCH=Back To Search
 SEARCH_BLOCK_HOST=Do you want to block search results from the host at
-SEARCH_UNBLOCK_ALL_FILES=Are you sure you want to exclude nothing from future results?
+SEARCH_BLOCK_FILE=Do you want to block this file from all future search results?
+SEARCH_UNBLOCK_ALL_FILES=Are you sure you want to clear all file blocks for future search results?
 
 #Media Types
 MEDIA_ANY_TYPE=Any Type
@@ -1108,6 +1110,7 @@ OPTIONS_SEARCH_SPEED_MAIN_TITLE=Speed
 OPTIONS_FILTERS_MAIN_TITLE=Filters
 OPTIONS_RESULTS_MAIN_TITLE=Keywords
 OPTIONS_MESSAGES_MAIN_TITLE=Hosts
+OPTIONS_FILES_MAIN_TITLE=Files
 OPTIONS_ADVANCED_MAIN_TITLE=Advanced
 OPTIONS_COMPRESSION_MAIN_TITLE=Compression
 OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
@@ -1445,6 +1448,13 @@ OPTIONS_IGNORE_MESSAGES_TITLE=Filter Hosts
 OPTIONS_IGNORE_MESSAGES_LABEL=You can disallow messages from specific hosts by adding their IP addresses (e.g. "192.168.0.1", "192.*.*.*", "192.168.12.16/255.255.255.240" or "192.168.12.16/28") to the banned list.
 OPTIONS_ALLOW_MESSAGES_TITLE=Allow Hosts
 OPTIONS_ALLOW_MESSAGES_LABEL=You can allow messages from specific hosts by adding their IP addresses (e.g. "192.168.0.1", "192.*.*.*", "192.168.12.16/255.255.255.240" or "192.168.12.16/28") to the allow list. This list is only needed to override the banned list.
+
+################################################################################
+# Key/Value pairs for file filtering options in the options window
+################################################################################
+OPTIONS_ALLOW_FILES_TITLE=Filter Files
+OPTIONS_ALLOW_FILES_LABEL=Clearing all blocked files will allow them to appear in future search results.
+OPTIONS_ALLOW_FILES_CLEAR_ALL=Clear all
 
 ################################################################################
 # Key/Value pairs for disabling compression support
