--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -689,7 +689,7 @@ RESULT_PANEL_VENDOR=Vendeur/Version
 #### RESULT_PANEL_ADDED=Created
 RESULT_PANEL_ADDED=Créé
 #### RESULT_PANEL_LICENSE=License
-#? RESULT_PANEL_LICENSE=
+RESULT_PANEL_LICENSE=Licence
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
@@ -1167,7 +1167,7 @@ LIBRARY_TABLE_HITCOUNT=Demandés
 #### LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_NUMALTLOC=Sources
 #### LIBRARY_TABLE_LICENSE=License
-#? LIBRARY_TABLE_LICENSE=
+LIBRARY_TABLE_LICENSE=Licence
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=Transférés
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1416,7 +1416,7 @@ META_EDITOR_ACTION_LABEL=Action\u00a0:
 #### META_EDITOR_STARS_LABEL=Stars:
 META_EDITOR_STARS_LABEL=Étoiles\u00a0:
 #### META_EDITOR_LICENSE_LABEL=License:
-#? META_EDITOR_LICENSE_LABEL=
+META_EDITOR_LICENSE_LABEL=Licence\u00a0:
 
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=Taille\u00a0:
@@ -1812,7 +1812,7 @@ ERROR_CANT_RESUME_START=Le fichier
 #### ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
 ERROR_CANT_RESUME_END=n'est pas un fichier incomplet valide et son téléchargement ne peut être poursuivi.
 #### ERROR_OPEN_URL=LimeWire could not locate your web browser to display the following webpage:
-#? ERROR_OPEN_URL=
+ERROR_OPEN_URL=LimeWire ne parvient pas à localiser votre navigateur Internet pour afficher la page suivante\u00a0:
 #### ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save directory. Please select a new save directory in the Options menu and try again.
 ERROR_ACCESSING_SAVE_DIRECTORY=Impossible d'accéder à votre dossier de sauvegarde. Sélectionnez un nouveau dossier dans le menu Options et réessayez.
 #### ERROR_DEL_META_USER=Cannot remove unsaved info.
@@ -1872,27 +1872,27 @@ ERROR_XML_SEARCH_TOO_LARGE=Votre recherche est trop spécifique. Veuillez supprim
 # Messages for Creative Commons Licensing
 ################################################################################
 #### LICENSE_CC_VIEW_LICENSE=View License
-#? LICENSE_CC_VIEW_LICENSE=
+LICENSE_CC_VIEW_LICENSE=Consulter la licence
 #### LICENSE_CC_TITLE=License Details
-#? LICENSE_CC_TITLE=
+LICENSE_CC_TITLE=Détails de la licence
 #### LICENSE_CC_LOCATING=LimeWire is currently locating the details of this license.
-#? LICENSE_CC_LOCATING=
+LICENSE_CC_LOCATING=LimeWire tente de localiser les détails de la licence.
 #### LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
-#? LICENSE_CC_UNVERIFIED=
+LICENSE_CC_UNVERIFIED=LimeWire n'a pas encore vérifié cette licence. Cliquer sur "Vérifier" pour localiser les détails de cette licence Creative Commons.
 #### LICENSE_CC_VERIFY=Verify
-#? LICENSE_CC_VERIFY=
+LICENSE_CC_VERIFY=Vérifier
 #### LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
-#? LICENSE_CC_INVALID=
+LICENSE_CC_INVALID=LimeWire n'est pas parvenu à localiser les détails de cette licence.
 #### LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
-#? LICENSE_CC_RETRY=
+LICENSE_CC_RETRY=Vous pouvez tenter de valider à nouveau cvette licence en cliquant "Vérifier".
 #### LICENSE_CC_DETAILS=License Details:
-#? LICENSE_CC_DETAILS=
+LICENSE_CC_DETAILS=Détails de la licence\u00a0:
 #### LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
-#? LICENSE_CC_CLAIMED_DEED=
+LICENSE_CC_CLAIMED_DEED=Consulter l'objet de l'accord de licence indiqué
 #### LICENSE_CC_DEED=View License Deed
-#? LICENSE_CC_DEED=
+LICENSE_CC_DEED=Objet de la licence...
 #### LICENSE_CC_VERIFICATION=View Verification Page
-#? LICENSE_CC_VERIFICATION=
+LICENSE_CC_VERIFICATION=Page de vérification...
 
 
 ################################################################################
