re-added rename in the library folder.  (just for files, not folders.)

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -432,6 +432,7 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
 LIBRARY_ANNOTATE_BUTTON_TIP=Describe Selected File
 LIBRARY_RESUME_BUTTON_LABEL=Resume
 LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
+LIBRARY_RENAME_BUTTON_LABEL=Rename
 
 PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
