--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=\u9078\u629e\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u30
 LIBRARY_RESUME_BUTTON_LABEL=\u30ec\u30b8\u30e5\u30fc\u30e0
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3092\u30ec\u30b8\u30e5\u30fc\u30e0\u3059\u308b
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u958b\u304f...
