--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -754,6 +754,8 @@ LIBRARY_REFRESH_BUTTON_TIP=\uc790\ub8cc\uc2e4 \uc0c8\ub85c\uace0\uce68
 #? LIBRARY_RESUME_BUTTON_LABEL=
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 #? LIBRARY_RESUME_BUTTON_TIP=
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 #? PLAYLIST_LOAD_BUTTON_LABEL=
