--- a/lib/messagebundles/MessagesBundle_pt.properties
+++ b/lib/messagebundles/MessagesBundle_pt.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=Fazer anotações sobre o arquivo selecionado.
 LIBRARY_RESUME_BUTTON_LABEL=Forçar retomada
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Tentar recuperar um download.
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Abrir...
