--- a/lib/messagebundles/MessagesBundle_sv.properties
+++ b/lib/messagebundles/MessagesBundle_sv.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=Kommentera vald fil.
 LIBRARY_RESUME_BUTTON_LABEL=Fortsätt
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 #? LIBRARY_RESUME_BUTTON_TIP=
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Öppna...
