--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=\u062a\u0648\u062b\u064a\u0642 \u0627\u0644\u0645\u0
 LIBRARY_RESUME_BUTTON_LABEL=\u0625\u064a\u0642\u0627\u0641 \u0645\u0624\u0642\u062a
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u0627\u0633\u062a\u0623\u0646\u0641 \u062a\u0646\u0632\u064a\u0644 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062e\u062a\u0627\u0631\u0629 \u0627\u0644\u063a\u064a\u0631 \u0643\u0627\u0645\u0644\u0629.
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u0641\u062a\u062d...
