--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=Ingresar comentario al archivo seleccionado.
 LIBRARY_RESUME_BUTTON_LABEL=Reanudar
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Continuar la descarga del archivo incompleto seleccionado.
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Abrir...
