--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=Liitä valitut tiedostot.
 LIBRARY_RESUME_BUTTON_LABEL=Jatka
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Jatka keskeytyneitä latauksia.
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Avaa...
