--- a/lib/messagebundles/MessagesBundle_it.properties
+++ b/lib/messagebundles/MessagesBundle_it.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=Annota l'archivo selezionato.
 LIBRARY_RESUME_BUTTON_LABEL=Forza ripristino
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Tenta di riavviare la ricezione.
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Apri...
