--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_LABEL=\u05ea\u05d0\u05d5\u05e8...
 LIBRARY_RESUME_BUTTON_LABEL=\u05d4\u05e4\u05e2\u05dc \u05de\u05d7\u05d3\u05e9
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u05d4\u05de\u05e9\u05da \u05d4\u05d5\u05e8\u05d3\u05ea \u05d4\u05e7\u05d1\u05e6\u05d9\u05dd \u05e9\u05d8\u05e8\u05dd \u05e0\u05d2\u05de\u05e8.
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u05e4\u05ea\u05d7...
