--- a/lib/messagebundles/MessagesBundle_no.properties
+++ b/lib/messagebundles/MessagesBundle_no.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=Kommentér valgte fil.
 LIBRARY_RESUME_BUTTON_LABEL=Fortsett
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Fortsett å laste ned ufullstendig fil.
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Åpne...
