--- a/lib/messagebundles/MessagesBundle_tl.properties
+++ b/lib/messagebundles/MessagesBundle_tl.properties
@@ -754,6 +754,8 @@ ABOUT_BUTTON_LABEL=OK
 #? LIBRARY_RESUME_BUTTON_LABEL=
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 #? LIBRARY_RESUME_BUTTON_TIP=
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 #? PLAYLIST_LOAD_BUTTON_LABEL=
