--- a/lib/messagebundles/MessagesBundle_vi.properties
+++ b/lib/messagebundles/MessagesBundle_vi.properties
@@ -754,6 +754,8 @@ SEARCH_PUBLIC_BROWSE_STRING=Duy\u1ec7t ch\u1ee7
 #? LIBRARY_RESUME_BUTTON_LABEL=
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 #? LIBRARY_RESUME_BUTTON_TIP=
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 #? PLAYLIST_LOAD_BUTTON_LABEL=
