--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -754,6 +754,8 @@ LIBRARY_ANNOTATE_BUTTON_TIP=\u6240 \u9009 \u6587\u4ef6\u7684 \u6ce8\u91ca.
 LIBRARY_RESUME_BUTTON_LABEL=\u6062\u590d \u4e0b\u8f7d
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=\u91cd\u65b0 \u5c1d\u8bd5 \u4e0b\u8f7d.
+#### LIBRARY_RENAME_BUTTON_LABEL=Rename
+#? LIBRARY_RENAME_BUTTON_LABEL=
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=\u6253\u5f00...
