--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.3.2
+# Messages Bundle for LimeWire 4.3.3
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -755,7 +755,7 @@ LIBRARY_RESUME_BUTTON_LABEL=Reprendre
 #### LIBRARY_RESUME_BUTTON_TIP=Continue Downloading Selected Incomplete File
 LIBRARY_RESUME_BUTTON_TIP=Poursuit le téléchargement du fichier incomplet sélectionné.
 #### LIBRARY_RENAME_BUTTON_LABEL=Rename
-#? LIBRARY_RENAME_BUTTON_LABEL=
+LIBRARY_RENAME_BUTTON_LABEL=Renommer
 
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Ouvrir...
