incorporated Roger's patch to have a CC playlist in DAAP.  thanks Roger!

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1085,7 +1085,7 @@ LICENSE_CC_DETAILS=License Details:
 LICENSE_CC_CLAIMED_DEED=View Claimed License Deed
 LICENSE_CC_DEED=View License Deed
 LICENSE_CC_VERIFICATION=View Verification Page
-
+LICENSE_CC=Creative Commons
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
