--- a/lib/messagebundles/MessagesBundle_af.properties
+++ b/lib/messagebundles/MessagesBundle_af.properties
@@ -1895,7 +1895,8 @@ META_SEARCH_SEARCH_BUTTON_LABEL=Soek
 #? LICENSE_CC_DEED=
 #### LICENSE_CC_VERIFICATION=View Verification Page
 #? LICENSE_CC_VERIFICATION=
-
+#### LICENSE_CC=Creative Commons
+#? LICENSE_CC=
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
