--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1895,7 +1895,8 @@ LICENSE_CC_CLAIMED_DEED=Étendue indiquée de la licence
 LICENSE_CC_DEED=Étendue de la licence
 #### LICENSE_CC_VERIFICATION=View Verification Page
 LICENSE_CC_VERIFICATION=Page de vérification
-
+#### LICENSE_CC=Creative Commons
+#? LICENSE_CC=
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
