--- a/lib/messagebundles/MessagesBundle_hi.properties
+++ b/lib/messagebundles/MessagesBundle_hi.properties
@@ -1895,7 +1895,8 @@ NO=\u0928\u0939\u0940\u0902
 #? LICENSE_CC_DEED=
 #### LICENSE_CC_VERIFICATION=View Verification Page
 #? LICENSE_CC_VERIFICATION=
-
+#### LICENSE_CC=Creative Commons
+#? LICENSE_CC=
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
