--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -1895,7 +1895,8 @@ ERROR_XML_SEARCH_TOO_LARGE=\u691c\u7d22\u304c\u9577\u3059\u304e\u307e\u3059\u300
 #? LICENSE_CC_DEED=
 #### LICENSE_CC_VERIFICATION=View Verification Page
 #? LICENSE_CC_VERIFICATION=
-
+#### LICENSE_CC=Creative Commons
+#? LICENSE_CC=
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
