Add "Creative Commons" label (not translated)

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1896,7 +1896,7 @@ LICENSE_CC_DEED=Étendue de la licence
 #### LICENSE_CC_VERIFICATION=View Verification Page
 LICENSE_CC_VERIFICATION=Page de vérification
 #### LICENSE_CC=Creative Commons
-#? LICENSE_CC=
+LICENSE_CC=Creative Commons
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
