--- a/lib/messagebundles/MessagesBundle_ca.properties
+++ b/lib/messagebundles/MessagesBundle_ca.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.1.6
+# Messages Bundle for LimeWire 4.3.4
 # Specialization for: Catalan - Catalunya (Spain), Andorra & France
 # Thanks to: Joan Ensesa.
 ################################################################################
@@ -160,7 +160,7 @@ ABOUT_LABEL_TITLE=Quant a LimeWire
 #### ABOUT_NOTICE_TIP=Display distribution and contact information.
 #? ABOUT_NOTICE_TIP=
 #### ABOUT_LICENSE_LABEL=License
-#? ABOUT_LICENSE_LABEL=
+ABOUT_LICENSE_LABEL=Llicència
 #### ABOUT_LICENSE_TIP=Display the license agreement about this software.
 #? ABOUT_LICENSE_TIP=
 #### ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
@@ -671,7 +671,7 @@ RESULT_PANEL_QUALITY=Qualitat
 #### RESULT_PANEL_NAME=Name
 RESULT_PANEL_NAME=Nom
 #### RESULT_PANEL_ICON=Icon
-#? RESULT_PANEL_ICON=
+RESULT_PANEL_ICON=Icona
 #### RESULT_PANEL_TYPE=Type
 RESULT_PANEL_TYPE=Tipus
 #### RESULT_PANEL_SIZE=Size
@@ -689,11 +689,11 @@ RESULT_PANEL_VENDOR=Proveïdor/versió
 #### RESULT_PANEL_ADDED=Created
 RESULT_PANEL_ADDED=Created
 #### RESULT_PANEL_LICENSE=License
-#? RESULT_PANEL_LICENSE=
+RESULT_PANEL_LICENSE=Llicència
 
 #Filter labels.
 #### SEARCH_FILTER_ALL=All
-#? SEARCH_FILTER_ALL=
+SEARCH_FILTER_ALL=Tot
 #### SEARCH_FILTER_OPTION=Option
 SEARCH_FILTER_OPTION=Opcion
 #### SEARCH_FILTER_OPTIONS=Options
@@ -840,7 +840,7 @@ STATISTICS_CONNECTION_TURBO_CHARGED=TurboCharged
 #### STATISTICS_CONNECTION_QUALITY=Quality:
 STATISTICS_CONNECTION_QUALITY=Qualitat:
 #### STATISTICS_CONNECTION_IDLE=Idle
-#? STATISTICS_CONNECTION_IDLE=
+STATISTICS_CONNECTION_IDLE=Ociós
 #### STATISTICS_CONNECTION_WAKING_UP=Waking Up
 #? STATISTICS_CONNECTION_WAKING_UP=
 #### STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
@@ -946,7 +946,7 @@ DOWNLOAD_QUEUED_HOSTS=A la cua distant
 #### DOWNLOAD_FROM=from
 #? DOWNLOAD_FROM=
 #### DOWNLOAD_MAGNET_DIALOG_END=?
-#? DOWNLOAD_MAGNET_DIALOG_END=
+DOWNLOAD_MAGNET_DIALOG_END=?
 #### DOWNLOAD_HASH_ONLY_MAGNET=LimeWire will not be able to start the download you have selected unless you start a search for it.
 #? DOWNLOAD_HASH_ONLY_MAGNET=
 #### DOWNLOAD_PRIORITY_ACTIVE=Active
@@ -1111,17 +1111,17 @@ CV_TABLE_STRING_CONNECTING=connectants
 #### CV_TABLE_STRING_CONNECTINGS=Connecting
 #? CV_TABLE_STRING_CONNECTINGS=
 #### CV_TABLE_STRING_LEAF=Leaf
-CV_TABLE_STRING_LEAF=fullas
+CV_TABLE_STRING_LEAF=fulla
 #### CV_TABLE_STRING_LEAVES=Leaves
-#? CV_TABLE_STRING_LEAVES=
+CV_TABLE_STRING_LEAVES=fullas
 #### CV_TABLE_STRING_ULTRAPEER=Ultrapeer
-CV_TABLE_STRING_ULTRAPEER=peers
+CV_TABLE_STRING_ULTRAPEER=ultrapeer
 #### CV_TABLE_STRING_ULTRAPEERS=Ultrapeers
-#? CV_TABLE_STRING_ULTRAPEERS=
+CV_TABLE_STRING_ULTRAPEERS=ultrapeers
 #### CV_TABLE_STRING_PEER=Peer
-#? CV_TABLE_STRING_PEER=
+CV_TABLE_STRING_PEER=peer
 #### CV_TABLE_STRING_PEERS=Peers
-#? CV_TABLE_STRING_PEERS=
+CV_TABLE_STRING_PEERS=peers
 #### CV_TABLE_STRING_STANDARD=0.6
 CV_TABLE_STRING_STANDARD=standards
 #### CV_TABLE_STRING_STANDARDS=Standard
@@ -1151,13 +1151,13 @@ CV_ADD_PORT_LABEL=Port:
 # Key/value pairs for strings in the library window
 ################################################################################
 #### LIBRARY_TABLE_ICON=Icon
-#? LIBRARY_TABLE_ICON=
+LIBRARY_TABLE_ICON=Icona
 #### LIBRARY_TABLE_NAME=Name
 LIBRARY_TABLE_NAME=Nom
 #### LIBRARY_TABLE_TITLE=Title
 #? LIBRARY_TABLE_TITLE=
 #### LIBRARY_TABLE_ARTIST=Artist
-#? LIBRARY_TABLE_ARTIST=
+LIBRARY_TABLE_ARTIST=Artista
 #### LIBRARY_TABLE_SIZE=Size
 LIBRARY_TABLE_SIZE=Mida
 #### LIBRARY_TABLE_TYPE=Type
@@ -1169,7 +1169,7 @@ LIBRARY_TABLE_HITCOUNT=Encerts
 #### LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_NUMALTLOC=Servidors
 #### LIBRARY_TABLE_LICENSE=License
-#? LIBRARY_TABLE_LICENSE=
+LIBRARY_TABLE_LICENSE=Llicència
 #### LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TABLE_UPLOAD_COUNT=Càrregues
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
@@ -1418,7 +1418,7 @@ META_EDITOR_SHA1_LABEL=SHA1:
 #### META_EDITOR_STARS_LABEL=Stars:
 #? META_EDITOR_STARS_LABEL=
 #### META_EDITOR_LICENSE_LABEL=License:
-#? META_EDITOR_LICENSE_LABEL=
+META_EDITOR_LICENSE_LABEL=Llicència:
 
 #### META_EDITOR_SIZE_LABEL=Size:
 META_EDITOR_SIZE_LABEL=Mida:
@@ -1535,7 +1535,7 @@ SPLASH_STATUS_MENUS=Carregant menus...
 #### SPLASH_STATUS_MESSAGE_SERVICE=Loading messages...
 SPLASH_STATUS_MESSAGE_SERVICE=Carregant missatges...
 #### SPLASH_STATUS_ICONS=Loading icons...
-#? SPLASH_STATUS_ICONS=
+SPLASH_STATUS_ICONS=Carregant iconas...
 #### SPLASH_STATUS_I18N=Loading internationalization support...
 #? SPLASH_STATUS_I18N=
 #### SPLASH_STATUS_DAAP=Loading Digital Audio Access Protocol...
@@ -1736,7 +1736,7 @@ ERROR_INTERNAL_TITLE=Error intern
 #### ERROR_INTERNAL_SERVLET=LimeWire has encountered an internal error. It is possible for LimeWire to recover and continue running normally. To aid with debugging, please click 'Send' to notify LimeWire about the problem. If desired, you can click 'Review' to look at the information that will be sent. Thank you.
 ERROR_INTERNAL_SERVLET=Hi ha hagut un error intern. Tanmateix, LimeWire pot recuperar-se'n i executar-se amb normalitat. To aid with debugging, please click 'Send' to notify LimeWire about the problem. If desired, you can click 'Anàlisa' to look at the information that will be sent. Thank you.
 #### ERROR_INTERNAL_SEND=Send
-#? ERROR_INTERNAL_SEND=
+ERROR_INTERNAL_SEND=Mana
 #### ERROR_INTERNAL_REVIEW=Review
 ERROR_INTERNAL_REVIEW=Anàlisa
 #### ERROR_INTERNAL_DISCARD=Discard
@@ -1808,7 +1808,7 @@ ERROR_ALREADY_DOWNLOADING=La baixada ja s'està efectuant
 #### NO_PREVIEW_BEGIN=There is nothing to preview for file
 #? NO_PREVIEW_BEGIN=
 #### NO_PREVIEW_END=.
-#? NO_PREVIEW_END=
+NO_PREVIEW_END=.
 #### ERROR_CANT_RESUME_START=The file
 #? ERROR_CANT_RESUME_START=
 #### ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
@@ -1882,7 +1882,7 @@ ERROR_THEME_OUT_OF_DATE_LATER=Més tard
 #### LICENSE_CC_UNVERIFIED=LimeWire has not yet verified this license.  Click 'verify' to locate the details of this Creative Commons license.
 #? LICENSE_CC_UNVERIFIED=
 #### LICENSE_CC_VERIFY=Verify
-#? LICENSE_CC_VERIFY=
+LICENSE_CC_VERIFY=Verifica
 #### LICENSE_CC_INVALID=LimeWire was unable to locate the details of this license.
 #? LICENSE_CC_INVALID=
 #### LICENSE_CC_RETRY=You can try validating this license again by clicking 'Verify'.
@@ -1896,7 +1896,7 @@ ERROR_THEME_OUT_OF_DATE_LATER=Més tard
 #### LICENSE_CC_VERIFICATION=View Verification Page
 #? LICENSE_CC_VERIFICATION=
 #### LICENSE_CC=Creative Commons
-#? LICENSE_CC=
+LICENSE_CC=Creative Commons
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
@@ -1930,7 +1930,7 @@ OPTIONS_PLAYER_MAIN_TITLE=Reproductor
 #### OPTIONS_ITUNES_MAIN_TITLE=iTunes
 OPTIONS_ITUNES_MAIN_TITLE=iTunes
 #### OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=Importing
-#? OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=
+OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=Importint
 #### OPTIONS_ITUNES_DAAP_MAIN_TITLE=Sharing
 OPTIONS_ITUNES_DAAP_MAIN_TITLE=Compartint
 #### OPTIONS_APPS_MAIN_TITLE=Helper Apps
@@ -2231,7 +2231,7 @@ OPTIONS_PLAYER_PREFERENCE_LABEL=Pot emprar el reproductor intern o el reproducto
 #### OPTIONS_ITUNES_SUPPORT_ACTIVE_CHECK_BOX_LABEL=Enable iTunes importing:
 #? OPTIONS_ITUNES_SUPPORT_ACTIVE_CHECK_BOX_LABEL=
 #### OPTIONS_ITUNES_PREFERENCE_TITLE=Importing
-#? OPTIONS_ITUNES_PREFERENCE_TITLE=
+OPTIONS_ITUNES_PREFERENCE_TITLE=Importint
 #### OPTIONS_ITUNES_PREFERENCE_LABEL=You can have LimeWire import newly downloaded songs into iTunes.
 #? OPTIONS_ITUNES_PREFERENCE_LABEL=
 
