remove unnecessary labels, remove the word 'client'.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -102,8 +102,7 @@ APP_TITLE=LimeWire: Enabling Open Information Sharing
 # Key/Value pairs for the about window, accessed through the help menu
 ################################################################################
 ABOUT_TITLE=About LimeWire
-ABOUT_LABEL_START=LimeWire Client
-ABOUT_LABEL_ADDRESS=http://www.limewire.com
+ABOUT_LABEL_START=LimeWire
 ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 ABOUT_LABEL_TITLE=About LimeWire
 ABOUT_CREDITS_LABEL=Credits
@@ -113,7 +112,6 @@ ABOUT_NOTICE_TIP=Display distribution and contact information.
 ABOUT_LICENSE_LABEL=License
 ABOUT_LICENSE_TIP=Display the license agreement about this software.
 ABOUT_SCROLL_CHECK_BOX_LABEL=Automatically Scroll
-ABOUT_BUTTON_LABEL=OK
 ABOUT_BUTTON_TIP=Close the About Window
 
 ###################################################################
