added UPNP config screen.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1122,8 +1122,7 @@ OPTIONS_MESSAGES_MAIN_TITLE=Hosts
 OPTIONS_ADVANCED_MAIN_TITLE=Advanced
 OPTIONS_COMPRESSION_MAIN_TITLE=Compression
 OPTIONS_PREFERENCING_MAIN_TITLE=Preferencing
-OPTIONS_PORT_MAIN_TITLE=Port
-OPTIONS_FIREWALL_MAIN_TITLE=Firewalls
+OPTIONS_FIREWALL_MAIN_TITLE=Firewall Config
 OPTIONS_PRIVATE_NET_MAIN_TITLE=Private Network
 OPTIONS_STARTUP_MAIN_TITLE=System Startup
 OPTIONS_PROXY_MAIN_TITLE=Proxy
@@ -1493,13 +1492,14 @@ OPTIONS_PORT_LABEL=You can set the local network port that listens for incoming 
 OPTIONS_PORT_BOX_LABEL=Listen on Port:
 
 ################################################################################
-# Key/Value pairs for the options for forcing your IP address
+# Key/Value pairs for the options for router configuration
 # in the advanced panel in the options window
 ################################################################################
-OPTIONS_FORCE_IP_TITLE=Force Local IP
-OPTIONS_FORCE_IP_LABEL=Allows you to force your IP address if you are behind a firewall and would like other gnutella clients to connect without having to send a push request.
-OPTIONS_FORCE_IP_CHECK_BOX_LABEL=Force IP
-OPTIONS_FORCE_IP_PORT_LABEL=Port:
+OPTIONS_ROUTER_TITLE=Router Configuration
+OPTIONS_ROUTER_LABEL=LimeWire can configure itself to work from behind a firewall or router.  Using Universal Plug 'n Play (UPnP), LimeWire can automatically configure your router or firewall for optimal performance.  If your router does not support UPnP, LimeWire can be set to advertise an external port manually.  (You must also configure your router if you choose manual configuration.)
+OPTIONS_ROUTER_UPNP=Use UPnP (Recommended)
+OPTIONS_ROUTER_PORT=Manual Port Forward
+OPTIONS_ROUTER_NOTHING=Do Nothing (Not Recommended)
 
 ################################################################################
 # Key/Value pairs for the options for setting the connection strings
