added shutdown screen, changed UPnP halting to wait at most 30 seconds for cleanup.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -894,6 +894,12 @@ SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Loading saved files...
 SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Loading secure settings...
 
 ##################################################################
+# Key/value pairs for the shutdown window
+##################################################################
+SHUTDOWN_TITLE=Shutting down LimeWire...
+SHUTDOWN_WAIT=Please wait while LimeWire shuts down...
+
+##################################################################
 # Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
